--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
     "jest": "^26.5.0",
     "prettier": "^2.1.2",
     "vue-jest": "^3.0.4"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "post": 3001
+    }
   }
 }
